# visua

./: .clang-format  .gitignore  CMakeLists.txt  construct  flake.nix  run  vert.glsl
cmake/: Findportaudiocpp.cmake
resources/shaders/: frag.glsl  linear_spectrogram.frag  radial_spectrogram.frag  ray_frag.glsl  vert.glsl
scripts/: post-build.sh
src/: Audio.cpp  Audio.hpp  BarsVisualizer.cpp  BarsVisualizer.hpp  Common.h  Graphics.cpp  Graphics.hpp  LinearSpectrogram.cpp  LinearSpectrogram.hpp  Main.cpp  RadialSpectrogram.cpp  RadialSpectrogram.hpp  Shader.cpp  Shader.hpp  Simulation.cpp  Simulation.hpp  StarVisualizer.cpp  StarVisualizer.hpp  Stereo.hpp  Visualizer.hpp
